# android_hardware_qcom_display

./: .clang-format  .gitupstream  278533.patch  Android.bp  Android.mk  CleanSpec.mk  Makefile.am  common.mk  configure.ac  qmcs.mk
commonsys-intf/libqdmetadata/: Android.bp  Makefile.am  qdMetaData.cpp  qdMetaData.h  qd_utils.cpp
composer/: Android.bp  Android.mk  DisplayConfigAIDL.cpp  DisplayConfigAIDL.h  QtiComposer.cpp  QtiComposer.h  QtiComposerClient.cpp  QtiComposerClient.h  QtiComposerCommandBuffer.h  QtiComposerHandleImporter.cpp  QtiComposerHandleImporter.h  android.hardware.graphics.composer@2.3-service-sm8150.rc  cpuhint.cpp  cpuhint.h  display_null.cpp  display_null.h  gl_color_convert.cpp  gl_color_convert.h  gl_color_convert_impl.cpp  gl_color_convert_impl.h  gl_common.cpp  gl_common.h  gl_layer_stitch.h  gl_layer_stitch_impl.cpp  gl_layer_stitch_impl.h  hwc_buffer_allocator.cpp  hwc_buffer_allocator.h  hwc_buffer_sync_handler.cpp  hwc_buffer_sync_handler.h  hwc_callbacks.cpp  hwc_callbacks.h  hwc_color_manager.cpp  hwc_color_manager.h  hwc_color_mode_stc.cpp  hwc_color_mode_stc.h  hwc_debugger.cpp  hwc_debugger.h  hwc_display.cpp  hwc_display.h  hwc_display_builtin.cpp  (+31 more)
config/: backlight_calib_r66451_amoled_cmd_mode_dsi_visionox_panel_with_DSC.xml  backlight_calib_vtdr6130_amoled_cmd_mode_dsi_visionox_panel_with_DSC.xml  clstc_config_library.xml  display-board.mk  display-interfaces-product.mk  display-modules.mk  display-product-system.mk  display-product.mk  display-techpack.mk  kona.mk  msmnile.mk  qcs605.mk  qdcm_calib_data_Sharp_2k_cmd_mode_qsync_dsi_panel.json  qdcm_calib_data_Sharp_2k_video_mode_qsync_dsi_panel.json  qdcm_calib_data_Sharp_4k_cmd_mode_dsc_dsi_panel.json  qdcm_calib_data_Sharp_4k_cmd_mode_dsc_dsi_panel.xml  qdcm_calib_data_Sharp_4k_video_mode_dsc_dsi_panel.json  qdcm_calib_data_Sharp_qhd_cmd_mode_dsi_panel.json  qdcm_calib_data_default.xml  qdcm_calib_data_ft8726_fhd_plus_120Hz_Video_panel.json  qdcm_calib_data_ft8726_lcd_video_mode_dsi_focaltech_panel_with_DSC.json  qdcm_calib_data_nt35597_cmd_mode_dsi_truly_panel_with_DSC.xml  qdcm_calib_data_nt36672e_lcd_video_mode_dsi_novatek_panel_with_DSC.json  qdcm_calib_data_nt36672e_lcd_video_mode_dsi_novatek_panel_with_DSC_parrot.json  qdcm_calib_data_nt36672e_lcd_video_mode_dsi_novatek_panel_without_DSC.json  qdcm_calib_data_nt36672e_lcd_video_mode_dsi_novatek_panel_without_DSC_parrot.json  qdcm_calib_data_r66451_amoled_cmd_mode_dsi_visionox_panel_with_DSC.json  qdcm_calib_data_r66451_amoled_cmd_mode_dsi_visionox_panel_with_DSC.xml  qdcm_calib_data_r66451_amoled_cmd_mode_dsi_visionox_panel_with_DSC_TVM.json  qdcm_calib_data_r66451_amoled_cmd_mode_dsi_visionox_panel_without_DSC.json  qdcm_calib_data_r66451_amoled_video_mode_dsi_visionox_panel_with_DSC.json  qdcm_calib_data_r66451_amoled_video_mode_dsi_visionox_panel_without_DSC.json  qdcm_calib_data_rm69299_amoled_fhd+_video_mode_dsi_visionox_panel.xml  qdcm_calib_data_sharp_1080p_cmd_mode_dsi_panel.json  qdcm_calib_data_sw43404_amoled_cmd_mode_dsi_boe_panel_with_DSC.xml  qdcm_calib_data_sy103_amoled_video_mode_panel_without_DSC.json  qdcm_calib_data_vtdr6130_amoled_cmd_mode_dsi_visionox_panel_with_DSC.json  qdcm_calib_data_vtdr6130_amoled_cmd_mode_dsi_visionox_panel_with_DSC_TVM.json  qdcm_calib_data_vtdr6130_amoled_cmd_mode_dsi_visionox_panel_with_DSC_parrot.json  qdcm_calib_data_vtdr6130_amoled_qsync_cmd_mode_dsi_visionox_panel_with_DSC.json  (+11 more)
gpu_tonemapper/: Android.bp  Android.mk  EGLImageBuffer.cpp  EGLImageBuffer.h  EGLImageWrapper.cpp  EGLImageWrapper.h  TonemapFactory.cpp  TonemapFactory.h  Tonemapper.cpp  Tonemapper.h  engine.h  forward_tonemap.inl  glengine.cpp  glengine.h  rgba_inverse_tonemap.inl
gralloc/: Android.bp  Android.mk  QtiAllocator.cpp  QtiAllocator.h  QtiGralloc.cpp  QtiGralloc.h  QtiGrallocDefs.h  QtiGrallocMetadata.h  QtiGrallocPriv.h  gr_utils.h  (+32 more)
sdm/libs/core/: Android.bp  Android.mk  CMakeLists.txt  Makefile.am  color_manager.cpp  color_manager.h  comp_manager.cpp  comp_manager.h  core_impl.cpp  core_impl.h  core_interface.cpp  display_base.cpp  display_base.h  display_builtin.cpp  display_builtin.h  display_hdmi.cpp  display_hdmi.h  display_null.cpp  display_null.h  display_pluggable.cpp  display_pluggable.h  display_primary.cpp  display_primary.h  display_virtual.cpp  display_virtual.h  hw_events_interface.cpp  hw_events_interface.h  hw_info_default.cpp  hw_info_default.h  hw_info_interface.cpp  hw_info_interface.h  hw_interface.cpp  hw_interface.h  noise_plugin_intf_impl.cpp  noise_plugin_intf_impl.h  noise_plugin_unit_test.cpp  resource_default.cpp  resource_default.h  strategy.cpp  strategy.h
sdm/libs/core/drm/: hw_color_manager_drm.cpp  hw_color_manager_drm.h  hw_device_drm.cpp  hw_device_drm.h  hw_events_drm.cpp  hw_events_drm.h  hw_hdmi_drm.cpp  hw_hdmi_drm.h  hw_info_drm.cpp  hw_info_drm.h  hw_peripheral_drm.cpp  hw_peripheral_drm.h  hw_scale_drm.cpp  hw_tv_drm.cpp  hw_tv_drm.h  hw_virtual_drm.cpp  hw_virtual_drm.h
sdm/libs/core/fb/: hw_color_manager.cpp  hw_device.cpp  hw_device.h  hw_events.cpp  hw_events.h  hw_hdmi.cpp  hw_hdmi.h  hw_info.cpp  hw_info.h  hw_primary.cpp  hw_primary.h  hw_scale.cpp  hw_virtual.cpp  hw_virtual.h
sdm/libs/dal/: Android.bp  Makefile.am  hw_color_manager_drm.cpp  hw_device_drm.cpp  hw_device_drm.h  hw_events_drm.cpp  hw_events_drm.h  hw_events_interface.cpp  hw_info_drm.cpp  hw_info_drm.h  hw_info_interface.cpp  hw_interface.cpp  hw_peripheral_drm.cpp  hw_peripheral_drm.h  hw_scale_drm.cpp  hw_scale_drm.h  hw_tv_drm.cpp  hw_virtual_drm.cpp  hw_virtual_drm.h
(+815 files in other folders)
